fix: update API base path and enhance proxy configuration for improved routing style: add safe area insets for better layout on mobile devices refactor: improve upload button structure and enhance folder creation logic in Card.vue chore: upgrade @nuxt/icon dependency to version 2.0.0

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -509,6 +509,16 @@ body {
 	border-radius: 0 !important;
 }
 
+#pageContent {
+  padding-bottom: env(safe-area-inset-bottom);
+}
+#iniHeader {
+  top: env(safe-area-inset-top);
+}
+#container {
+  top: calc(env(safe-area-inset-top) + 64px);
+}
+
 @media (max-width: 768px) {
 	#tableCard > .n-card-header {
 		flex-direction: column;
